api-identity.yml
#identity deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-deployment
  namespace: appscore
  labels:
    app: identity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-pod
  template:
    metadata:
      labels:
        app: identity-pod
    spec:
      containers:
        - name: identity-container
          image: azed01/k8s:identity
          ports:
            - containerPort: 80
              name: identity-port
          resources:
            requests:
              cpu: ""
              memory: ""
            limits:
              cpu: ""
              memory: ""
      restartPolicy: Always
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - pap
                      -
              topologyKey:
---

#identity service
apiVersion: v1
kind: Service
metadata:
  name: identity-service
  namespace: appscore
spec:
  selector:
    app: identity-pod
  ports:
    - port: 80
      targetPort: 80
      name: identity-port
      protocol: TCP
  type: ClusterIP
