api-jobs.yml
#jobs deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobs-deployment
  namespace: appscore
  labels:
    app: jobs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobs-pod
  template:
    metadata:
      labels:
        app: jobs-pod
    spec:
      containers:
        - name: jobs-container
          image: azed01/k8s:jobs
          ports:
            - containerPort: 80
              name: jobs-port
          resources:
            limits:
              cpu: "1"
              memory: "1500Mi"
            requests:
              cpu: "0.5"
              memory: "500Mi"
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - database-service
              topologyKey: "kubernetes.io/hostname"
      restartPolicy: Always
---
#Jobs Service
apiVersion: v1
kind: Service
metadata:
  name: jobs-service
  namespace: appscore
spec:
  selector:
    app: jobs-pod
  ports:
    - port: 80
      targetPort: 80
      name: jobs-port
      protocol: TCP
  type: ClusterIP
