rabbitmq.yml
#rabbitmq deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
  namespace: appscore
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-pod
  template:
    metadata:
      labels:
        app: rabbitmq-pod
    spec:
      containers:
        - name: rabbitmq-container
          image: rabbitmq:3-management
          ports:
            - containerPort: 15672
              name: rabbitmq-port1
            - containerPort: 5672
              name: rabbitmq-port2
          livenessProbe:
            tcpSocket:
              port: 5672
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            exec:
              command:
                - rabbitmq-diagnostics
                - status
            initialDelaySeconds: 10
            periodSeconds: 5
      restartPolicy: Always
---
#rabbitmq service
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: appscore
spec:
  selector:
    app: rabbitmq-pod
  ports:
    - port: 15672
      name: rabbitmq-port1
      targetPort: 15672
      protocol: TCP
    - port: 5672
      name: rabbitmq-port2
      targetPort: 5672
      protocol: TCP
  type: ClusterIP
