web.yml
#web deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  namespace: appscore
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-pod
  template:
    metadata:
      labels:
        app: web-pod
    spec:
      containers:
        - name: web-container
          image: azed01/k8s:web
          ports:
            - containerPort: 80
              name: web-port
          resources:
            requests:
              cpu: "4"
              memory: "900Mi"
            limits:
              cpu: "1"
              memory: "2000Mi"
      restartPolicy: Always
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - applicants-service
                      - jobs-service
              topologyKey: "kubernetes.io/hostname"
---
#web Service
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: appscore
spec:
  selector:
    app: web-pod
  ports:
    - port: 80
      targetPort: 80
      name: web-port
      protocol: TCP
  type: ClusterIP
